<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".HomeActivity">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ActionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/home_margin">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_margin"
                    card_view:contentPadding="@dimen/home_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome"
                            android:paddingBottom="@dimen/home_margin"/>

                        <TextView
                            style="@style/ContentStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/home_margin">

                    <include
                        android:id="@+id/basic_info_overflow"
                        layout="@layout/card_overflow"
                        android:layout_height="@dimen/overflow_height"
                        android:layout_width="@dimen/overflow_width"
                        android:layout_gravity="end"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/home_margin">

                        <include
                            android:id="@+id/basic_info_notification_shown_container"
                            layout="@layout/notification_shown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"/>

                        <TextView
                            android:id="@+id/basic_info_title"
                            style="@style/TitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basic_info_title"
                            android:paddingBottom="@dimen/home_margin"/>

                        <TextView
                            android:id="@+id/basic_info_text"
                            style="@style/ContentStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/basic_info_title"
                            android:paddingBottom="@dimen/home_margin"
                            android:text="@string/basic_info_text"/>

                        <Button
                            android:id="@+id/basic_info_button"
                            style="@style/RaisedButtonStyle"
                            android:theme="@style/RaisedButtonTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/basic_info_text"
                            android:layout_alignParentEnd="true"
                            android:text="@string/show_notification"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include
                        android:id="@+id/recent_images_overflow"
                        layout="@layout/card_overflow"
                        android:layout_height="@dimen/overflow_height"
                        android:layout_width="@dimen/overflow_width"
                        android:layout_gravity="end"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/home_margin">

                        <include
                            android:id="@+id/recent_images_notification_shown_container"
                            layout="@layout/notification_shown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"/>

                        <TextView
                            android:id="@+id/recent_images_title"
                            style="@style/TitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recent_images_title"
                            android:paddingBottom="@dimen/home_margin"/>

                        <TextView
                            android:id="@+id/recent_images_text"
                            style="@style/ContentStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/recent_images_title"
                            android:paddingBottom="@dimen/home_margin"
                            android:text="@string/recent_images_text"/>

                        <Button
                            android:id="@+id/recent_images_button"
                            style="@style/RaisedButtonStyle"
                            android:theme="@style/RaisedButtonTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/recent_images_text"
                            android:layout_alignParentEnd="true"
                            android:text="@string/show_notification"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/toolbar_shadow"
            layout="@layout/toolbar_shadow"/>

    </FrameLayout>

</LinearLayout>
